--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,12 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# IntelliJ
+.idea
+
+# MAC
+.DS_Store
+
+# Database
+vectorstore/
